# OpenStoreManager

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
src/open_store_manager/: __init__.py  database.ini  open_store_manager.py  osm.db
src/open_store_manager/database_modules/: __init__.py  customers_manager.py  sqlite_verify.py
src/open_store_manager/resources/: constants.py
src/open_store_manager/window_modules/: __init__.py  cash_flow_viewer.py  customers_viewer.py  deliveries_viewer.py  documents_viewer.py  fidelity_card_viewer.py  suppliers_viewer.py  warehouse_viewer.py
