[project]
name = "Open Store Manager"
version = "0.0.1"
authors = [
	{ name="Augusto Burzo", email="info@augustoburzo.com" },
]
description = "Open solution to manage a simple store"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/augustoburzo/OpenStoreManager.git"

